[gd_scene load_steps=3 format=2]

[ext_resource path="res://CENAS/Tela Principal.gd" type="Script" id=1]
[ext_resource path="res://Telas/1.full.jpeg" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="1full" type="Sprite" parent="."]
position = Vector2( 199, 398 )
scale = Vector2( 0.551389, 0.621484 )
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="1full"]
margin_left = -124.0
margin_top = -140.0
margin_right = 114.0
margin_bottom = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="1full"]
margin_left = -134.0
margin_top = -16.0
margin_right = 128.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="1full"]
margin_left = -134.0
margin_top = 142.0
margin_right = 132.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="1full"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = 289.0
margin_right = -579.0
margin_bottom = -920.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="1full/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="1full/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="1full/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="1full/TextureButton4" to="." method="_on_TextureButton4_pressed"]
